--- a/index.html
+++ b/index.html
@@ -3,38 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hospital App - Remote Diagnosis</title>
+    <title>AI Hospital - 원격 진료</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <div id="app">
         <header>
-           <!-- <img src="images/logo.png" alt="Hospital Logo" class="logo"> -->
-            <h1>원격 자가진단 서비스</h1>
+            <h1>AI Hospital - 원격 진료</h1>
         </header>
         <main>
-            <section>
-                <h2>증상 선택</h2>
-                <div class="symptoms">
-                    <button class="symptom-btn" data-symptom="fever">열</button>
-                    <button class="symptom-btn" data-symptom="cough">기침</button>
-                    <button class="symptom-btn" data-symptom="headache">두통</button>
-                    <button class="symptom-btn" data-symptom="fatigue">피곤</button>
-                    <button class="symptom-btn" data-symptom="nausea">메스꺼움</button>
-                    <button class="symptom-btn" data-symptom="sore throat">인후염</button>
-                    <button class="symptom-btn" data-symptom="runny nose">콧물</button>
-                    <button class="symptom-btn" data-symptom="shortness of breath">호흡 곤란</button>
-                    <button class="symptom-btn" data-symptom="chest pain">가슴 통증</button>
-                    <button class="symptom-btn" data-symptom="diarrhea">설사</button>
-                    <button class="symptom-btn" data-symptom="vomiting">구토</button>
-                    <button class="symptom-btn" data-symptom="rash">발진</button>
-                    <!-- 추가 증상 버튼들 -->
-                </div>
-                <button id="analyze-btn">증상 분석</button>
-                <div id="result"></div>
-            </section>
+            <div class="chat-container">
+                <div id="chat-box"></div>
+                <input type="text" id="user-input" placeholder="증상을 입력하세요..." autofocus>
+                <button id="send-button">전송</button>
+            </div>
         </main>
     </div>
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
